# query-plan-adapters

django/: Makefile  README.md  pyproject.toml
django/src/cerbos_django/: __init__.py  query.py
django/testproject/: settings.py
django/testproject/testapp/: models.py
django/testproject/testapp/migrations/: 0001_initial.py  0002_resource_related_user_related.py  0003_alter_resource_createdby_alter_resource_ownedby.py
django/tests/: conftest.py  test_query.py
django/tests/testproject/testapp/: models.py
policies/: resource.yaml
