[tool.poetry]
name = "cerbos-django"
version = "0.1.0"
description = "Django adapter for generating queries with Cerbos: an open core, language-agnostic, scalable authorization solution"
authors = ["Jakob Riebe <jr@estino.de>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "cerbos_django" }]

[tool.poetry.dependencies]
python = ">=3.8"
cerbos = "^0.10.0"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
