[tool.poetry]
name = "cerbos-django"
version = "0.1.0"
description = "Django adapter for generating queries with Cerbos: an open core, language-agnostic, scalable authorization solution"
authors = ["Jakob Riebe <jr@estino.de>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "cerbos_django" }]

[tool.poetry.dependencies]
python = ">=3.8"
cerbos = "^0.10.0"
django = "^4.2.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
cerbos = {version = "^0.10.0", extras = ["testcontainers"]}
pytest-django = "^4.5.2"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "testproject.settings"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
